Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObject.quorum
class Main
    action Main
        Object v
    Boolean t
        v:SetValue(true)
        Test(v)
    end

    action Test(Boolean var)
    end
end
